# AIssistant-backend

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  auth.py  config.py  data.py  db.py  file.py  loop.py  loop_nodes.py  main.py  node.py  project.db  pyproject.toml  router.py  state.py  testclient.py  tool.py
backend/: auth.py  config.py  context.py  data.py  file.py  loop.py  main.py  node.py  tool.py
docs/: PROJECT_LEARNING_PLAN.md
docs/scan-output/: AIssistant-backend.md  index.html  index.md  report.html
docs/study_notes/: README.md  stage1_infrastructure.md  stage2_data_focus.md  stage3_core_logic.md  stage4_integration.md  stage5_reliability.md  stage6_orchestration.md  stage7_quality.md  stage8_third_party.md
docs/study_notes/labs/: README.md
docs/superpowers/plans/: 2026-04-29-loop-graph-refactor.md  2026-04-29-loop-state-machine.md
docs/superpowers/specs/: 2026-04-29-loop-graph-refactor-design.md  2026-04-29-loop-state-machine-design.md
frontend/: CONFIG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  style.css
frontend/src/api/: index.ts  types.ts
frontend/src/api/mock/: chats.ts  subjects.ts
frontend/src/api/real/: chats.ts  subjects.ts
frontend/src/components/: ChatInput.vue  Header.vue  Sidebar.vue
frontend/src/router/: index.ts
frontend/src/stores/: chat.ts  index.ts  subject.ts
frontend/src/types/: index.ts
frontend/src/views/: Chat.vue  Overview.vue  SubjectDetail.vue
tests/: test_data_creation.py  test_loop_graph.py
