[project]
name = "aiassistant"
version = "0.1.0"
description = "AI Assistant backend service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "pydantic-ai>=1.70.0",
    "pydantic-ai-skills>=0.6.0",
    "uv>=0.11.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
